# magireco-cnv-client

./: AndroidManifest.xml  README.md  apktool.yml
.github/workflows/: build-apk.yml  cleanup-contributor-vars.yml  fetch-cn-apk.yml  gen-signing-key.yml  seed-url-vars.yml
assets/dexopt/: baseline.prof  baseline.profm
assets/package/debug/: anime_viewer_ui.json  sound_viewer_ui.json  spfx_viewer_ui.json
assets/package/download/: data_download0.plist  loading_data.plist  loading_resource.ExportJson  loading_resource0.plist
assets/package/evolution/: web_ef_reality_up.ExportJson  web_ef_reality_up0.plist  web_ef_reality_up_ef_01.plist  web_ef_reality_up_ef_02.plist  web_ef_reality_up_ef_03.plist  web_ef_reality_up_glitter_00.plist  web_ef_reality_up_glitter_01.plist
assets/package/live2dViewer/: select_bg_state.json  select_model_state_ui.json  view_model_state.json
assets/package/loading/: loading_relative.json  tips.plist
assets/package/memoria/: title_effect.plist  web_ef_memoria0.plist  web_ef_memoria_memoria_glitter_00.plist  web_ef_memoria_memoria_glitter_01.plist  web_ef_memoria_memoria_glitter_02.plist
assets/package/movie/: ui_touchscreen0.plist
assets/package/quest/: ef_cm_yaji0.plist  iconStatus.plist  quest_image0.plist  quest_layer_ui.json  quest_layer_ui_high.json  quest_layer_ui_sdviewer.json  quest_sdviewer.json  quest_ui.json  z_mark0.plist
assets/package/selectURL/: select_url_ui.json
assets/package/story/: story_log_ui.json  story_ui.json  story_ui_sprites00.plist
assets/package/tap/: ef_tap0.plist
assets/package/top/: to_bg_ef_01.plist  to_bg_ef_02.plist  to_bg_ef_03.plist  to_bg_ef_04.plist  to_bg_ef_05.plist  to_bg_ef_06.plist  to_bg_ef_07.plist  to_bg_ef_08.plist  toppage_bg_020.plist  toppage_bg_021.plist
assets/package/window/: common_btn0.plist  popup_bg00.plist
cnv-native/: CMakeLists.txt
cnv-native/src/: MagiaClient.cpp
docs/: server-guide.md
original/: AndroidManifest.xml
res/values/: attrs.xml  colors.xml  ids.xml  public.xml  strings.xml  styles.xml
res/values-ar/: strings.xml
res/values-bn/: strings.xml
res/values-es/: strings.xml
res/values-eu/: strings.xml
res/values-hu/: strings.xml
res/values-kn/: strings.xml
res/values-mr/: strings.xml
res/values-nl/: strings.xml
res/values-pa/: strings.xml
res/values-sl/: strings.xml
res/values-te/: strings.xml
smali/androidx/activity/: R$id.smali
smali/androidx/appcompat/: R$attr.smali  R$color.smali  R$dimen.smali  R$drawable.smali  R$id.smali  R$layout.smali  R$string.smali  R$style.smali  R$styleable.smali
smali/androidx/core/: R$attr.smali  R$color.smali  R$id.smali  R$string.smali  R$style.smali  R$styleable.smali
smali/androidx/customview/: R$attr.smali  R$color.smali  R$id.smali  R$string.smali  R$style.smali  R$styleable.smali
smali/androidx/drawerlayout/: R$attr.smali  R$color.smali  R$id.smali  R$string.smali  R$style.smali  R$styleable.smali
smali/androidx/fragment/: R$attr.smali  R$color.smali  R$id.smali  R$string.smali  R$style.smali  R$styleable.smali
smali/androidx/loader/: R$attr.smali  R$color.smali  R$id.smali  R$string.smali  R$style.smali  R$styleable.smali
smali/androidx/savedstate/: R$id.smali
smali/androidx/vectordrawable/: R$attr.smali  R$color.smali  R$id.smali  R$string.smali  R$style.smali  R$styleable.smali
smali/androidx/viewpager/: R$attr.smali  R$color.smali  R$id.smali  R$string.smali  R$style.smali  R$styleable.smali
smali/jp/f4samurai/: AppActivity$1.smali  AppActivity.smali  MyApplication.smali
smali/kotlinx/coroutines/: CoroutineId.smali  (+2 more)
tools/: patch_libmadomagi.py
ui-template/: BootstrapActivity.java.reference
unknown/: google-services.json
(+1697 files in other folders)
